fix: right align chips

--- a/src/components/Points/styles.module.css
+++ b/src/components/Points/styles.module.css
@@ -25,7 +25,7 @@
   color: var(--mui-palette-background-paper);
   border-radius: 4px;
   height: 24px;
-  margin-left: 8px;
+  margin-left: auto;
   border: none;
   font-weight: 400;
   cursor: pointer;
